<resources>
    <string name="app_name">Scorekeeper</string>
    <string name="team_1">Team 1</string>
    <string name="NumberUp">0</string>
    <string name="plus_button">Plus Button</string>
    <string name="minus">Minus</string>
    <string name="NumberDown">0</string>
    <string name="team_2">Team 2</string>
    <string name="night_mode">Night mode</string>
    <string name="day_mode">Day Mode</string>
</resources>
